# jlds

./: .gitignore  LICENSE.md  README.md
.githooks/: pre-commit
.github/workflows/: deploy.yml  release.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs  registry.rs
cli/src/commands/: add.rs  init.rs  list.rs  mod.rs  update.rs
demo/react/: jlds.json  package.json  pnpm-lock.yaml
demo/vue/: eslint.config.js  jlds.json  package-lock.json  package.json
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/cli/: add.md  index.md  init.md  list.md  update.md
docs/components/: accordion.md  alert.md  app-shell.md  avatar.md  badge.md  banner.md  bottom-nav.md  breadcrumb.md  button.md  card.md  carousel.md  chart.md  checkbox.md  collapsible.md  combobox.md  command-palette.md  date-picker.md  dialog.md  divider.md  drawer.md  dropdown-menu.md  empty-state.md  field.md  file-upload.md  icon-button.md  index.md  input.md  kbd.md  number-input.md  page-header.md  pagination.md  popover.md  progress.md  radio-group.md  rating.md  resizable.md  responsive-table.md  scroll-area.md  segmented-control.md  select.md  (+19 more)
docs/examples/: checkout.md  command.md  dashboard.md  data-table.md  detail.md  empty-states.md  file-explorer.md  index.md  kanban.md  marketing.md  settings.md  sign-in.md
docs/guide/: getting-started.md  responsive.md  theming.md  vanilla-html.md  what-is-jlds.md
docs/public/: robots.txt
docs/registry/: index.md  self-hosting.md
docs/scripts/: gen-llms.mjs  sync-css.mjs
registry/: registry.json
(+609 files in other folders)
